--- a/my_work/test_grid.html
+++ b/my_work/test_grid.html
@@ -52,20 +52,22 @@
 			init();
 			createGrid();
 			animate();
+			drawLine();
 
 			function init() {
 
-				camera = new THREE.PerspectiveCamera( 60, WIDTH / HEIGHT, 1, 200 );
+				camera = new THREE.PerspectiveCamera( 60, WIDTH / HEIGHT, 1, 2000 );
 				camera.up.set( 0, 0, 1 );
 				camera.position.z = 150;
-				camera.position.x = 0;
-				camera.position.y = 0;
+				camera.position.x = 20;
+				camera.position.y = -50;
+				camera.lookAt(new THREE.Vector3(0, 0, 0));
 
 
 
 				scene = new THREE.Scene();
 
-				scene.fog = new THREE.Fog( 0x111111, 150, 200 );
+				//scene.fog = new THREE.Fog( 0x111111, 150, 200 );
 
 				root = new THREE.Object3D();
 
@@ -262,7 +264,7 @@
 				scene.add( gridHelper );
 
 				// axis
-				var axisHelper = new THREE.AxisHelper( 50 );
+				var axisHelper = new THREE.AxisHelper( 10 );
 				scene.add( axisHelper );
 			}
 
@@ -272,6 +274,21 @@
 //				stats.update();
 //
 //			}
+
+			function drawLine() {
+				var material = new THREE.LineBasicMaterial({
+					color: 0x0000ff
+				});
+				var geometry = new THREE.Geometry();
+				geometry.vertices.push(new THREE.Vector3(-20, 0, 0));
+				geometry.vertices.push(new THREE.Vector3(0, 50, 0));
+				geometry.vertices.push(new THREE.Vector3(80, 0, 0));
+
+				var line = new THREE.Line(geometry, material);
+
+				scene.add(line);
+
+			}
 
 
 		</script>
