--- a/my_work/draw_polygon.html
+++ b/my_work/draw_polygon.html
@@ -26,8 +26,8 @@
 
 			#container {
 				background-color: #000;
-				width: 200px;
-				height: 200px;
+				width: 100%;
+				height: 100%;
 			}
 
 		</style>
@@ -59,8 +59,10 @@
 			var objects = [];
 			var group;
 			var line,vertex_number,positions,fishShape;
-			var DRAW_STATE_MACHINE={ IDLE:0, DRAWING:1 }
+			var DRAW_STATE_MACHINE={ IDLE:0, DRAWING:1 };
 			var draw_state=DRAW_STATE_MACHINE.IDLE;
+			var current_mesh_name;
+			var count=0;
 			var raycaster = new THREE.Raycaster();
 			var MAX_POINTS=103;
 
@@ -89,8 +91,8 @@
 				camera.position.y = -50;
 				camera.lookAt(new THREE.Vector3(0, 0, 0));
 
-				var light = new THREE.PointLight( 0xffffff, 0.8 );
-				camera.add( light );
+//				var light = new THREE.PointLight( 0xffffff, 0.8 );
+//				camera.add( light );
 
 				scene = new THREE.Scene();
 
@@ -331,14 +333,17 @@
 //				fishShape.moveTo(10, 10);
 //				fishShape.moveTo(10,-10);
 //				fishShape.moveTo(-10,-10);
+//					fishShape.moveTo(-10,20);
 
 					// flat shape
 
-					var geometry = new THREE.ShapeGeometry( fishShape );
+//					var geometry = new THREE.ShapeGeometry( fishShape );
+//
+//					var mesh = new THREE.Mesh( geometry, new THREE.MeshBasicMaterial( { color: 0x0000ff, transparent:true, opacity:0.5 } ) );
+					current_mesh_name = "my_mesh"+count; count++;
+//					mesh.name = current_mesh_name;
+//					mesh.position.set( 0, 0, 10 );
 
-					var mesh = new THREE.Mesh( geometry, new THREE.MeshPhongMaterial( { color: 0x0000ff, transparent:true, opacity:0.5, side: THREE.DoubleSide } ) );
-					mesh.name = "my_mesh1";
-					mesh.position.set( 0, 0, 10 );
 //				mesh.rotation.set( rx, ry, rz );
 //				mesh.scale.set( s, s, s );
 
@@ -371,7 +376,7 @@
 
 					raycaster.setFromCamera( mouse, camera );
 
-					var plane = new THREE.Plane(new THREE.Vector3(0,0,1));
+					var plane = new THREE.Plane(new THREE.Vector3(0,0,1),0);
 
 					var intersection = new THREE.Vector3();
 					if(raycaster.ray.intersectPlane( plane, intersection ))
@@ -386,18 +391,19 @@
 
 				function addPoint(myPoint) {
 
-					var rm_mesh = scene.getObjectByName('my_mesh');
+					var rm_mesh = scene.getObjectByName(current_mesh_name);
 					scene.remove( rm_mesh );
 
-					fishShape.moveTo(myPoint.x,myPoint.y);
+					fishShape.moveTo(myPoint.x,myPoint.y,myPoint.z);
 
 					// flat shape
 
 					var geometry = new THREE.ShapeGeometry( fishShape );
 
 					var mesh = new THREE.Mesh( geometry, new THREE.MeshPhongMaterial( { color: 0x00ff00, transparent:true, opacity: 0.8, side: THREE.DoubleSide } ) );
-					mesh.name = 'my_mesh';
-//				mesh.position.set( x, y, z - 125 );
+					mesh.name = current_mesh_name;
+				mesh.position = new THREE.Vector3(0, 0, 0.1);
+					mesh.position.setZ(0.1);
 //				mesh.rotation.set( rx, ry, rz );
 //					mesh.scale.set( s, s, s );
 
