--- a/my_work/polygon_texture_shader.html
+++ b/my_work/polygon_texture_shader.html
@@ -39,9 +39,11 @@
 
 		<script id="vertexShader" type="x-shader/x-vertex">
 			varying vec2 vUv;
+			varying vec3 pos;
 
 			void main() {
 				vUv = uv;
+				pos = position;
 
 				gl_Position =   projectionMatrix *
 								modelViewMatrix *
@@ -53,9 +55,14 @@
 			uniform sampler2D texture1;
 
 			varying vec2 vUv;
+			varying vec3 pos;
 
 			void main() {
-				gl_FragColor = texture2D(texture1, vec2(vUv.x,vUv.y) );
+
+				float tx = mod(pos.x,1.0);
+				float ty = mod(pos.y,1.0);
+				gl_FragColor = texture2D(texture1, vec2(tx,ty) );
+				//gl_FragColor = texture2D(texture1, vec2(vUv.x,vUv.y) );
 				//gl_FragColor = vec4(0.5, 0.2, 1.0, 1.0); // Works; Displays Flat Color
 			}
 		</script>
