--- a/my_work/polygon_texture_shader.html
+++ b/my_work/polygon_texture_shader.html
@@ -59,9 +59,10 @@
 
 			void main() {
 
+				// lane width 5
 				//float tx = mod(pos.x,1.0);
-				//float ty = mod(pos.y,1.0);
-				//gl_FragColor = texture2D(texture1, vec2(tx,ty) );
+				//float ty = mod(pos.y,5.0);
+				//gl_FragColor = texture2D(texture1, vec2(tx,ty*0.2) );
 
 				gl_FragColor = texture2D(texture1, vec2(vUv.x,vUv.y*0.2) );
 				//gl_FragColor = vec4(0.5, 0.2, 1.0, 1.0); // Works; Displays Flat Color
@@ -182,8 +183,8 @@
 				loader.load('images/direction.png', function ( texture ) {
 
 //					texture.wrapS = THREE.RepeatWrapping;
-					texture.wrapT = THREE.RepeatWrapping;
-					texture.repeat.set.y = 1/lane_width;
+//					texture.wrapT = THREE.RepeatWrapping;
+//					texture.repeat.set.y = 1/lane_width;
 
 
 					// Create ShaderMaterial
@@ -209,8 +210,8 @@
 					fishShape.moveTo(0, 0);
 					fishShape.moveTo(10, 0);
 					fishShape.moveTo(10, 20);
-					fishShape.moveTo(5, 20);
-					fishShape.moveTo(5, 5);
+					fishShape.moveTo(lane_width, 20);
+					fishShape.moveTo(lane_width, lane_width);
 					fishShape.moveTo(0, lane_width);
 
 					var geometry = new THREE.ShapeGeometry(fishShape);
